styles/style.css
/* Initial setting */
a {
	transition: 0.5s all;
  -webkit-transition: 0.5s all;
  -moz-transition: 0.5s all;
  -o-transition: 0.5s all;
  text-decoration: none;
}
/* End initial setting */

/* Header CSS */
header {
	background-color: #000000;
	padding: 0em 0em 1.4em 0em;
	top: 0;
	left: 0;
	position: fixed;
	width: 100vw;
	height: 75px;
	opacity: 0.8;
	z-index: 999;
}

.header-main {
	position: relative;
	height: 75px;
}

.logo {
	float: left;
	position: absolute;
}

.logo > a {
	text-decoration: none;
	display: block;
}

nav {
	padding: 1em 0em 0em 0em;
	float: right;
}

nav > ul {
	padding: 0px;
	list-style: none;
}

nav > ul > li {
	display: inline-block;
	float: left;
}

nav > ul > li > a {
	font-size: 1.5em;
	font-weight: 400;
	color: #FFFFFF;
	text-decoration: none;
	padding: 0.5em 1em 0.5em 1em;
	display: block;
}

nav > ul > li > a:hover {
	color: #C8A54B;
	text-decoration: none;
}

nav > ul > li > a:active {
	color: #C8A54B;
	text-decoration: none;
}

.dropdown {
	margin-right: 15px;
}

.dropdown-btn {
	color: #FFFFFF;
	font-size: 1.5em;
	font-weight: 400;
	padding: 0.5em 1em 0.5em 1em;
	background: none;
	border: none;
}

.dropdown-btn:hover{
	color: #C8A54B;
}

.dropdown-btn:focus{
  color: grey;
}

.dropdown-btn:active{
  color: #C8A54B;
}

.dropdown-menu {
	width: 250px;
}

.dropdown-menu > li > a {
	font-size: 1.5em;
	color: black;
	font-weight: bold;
	opacity: 100%;
}
/* End header CSS */

/* Banner CSS */
.banner {
	background: url(../images/banner.jpg) no-repeat;
	height: 100vh;
  width: 100vw;
  left: 0;
  top: 0;
	background-size: cover;
	background-position: center;
}

.banner-text {
	width: 41%;
	padding: 1em;
	background: rgba(132, 117, 78, 0.8);
	border-radius: 6px;
	margin: auto;
	min-width: 250px;
}

.banner-main {
	padding: 15em 0em 0em 0em;
}

.banner-text > h2 {
	font-size: 1.5em;
	font-weight: 400;
	color: #FFFFFF;
	margin: 0em 0em 0.25em 0em;
}

.banner-text > p {
	font-size: 0.9em;
  font-weight: 400;
  color: #FFFFFF;
  line-height: 1.5em;
  margin: 0em 0em 0.5em 0em;
}
/* End of Banner CSS */

/* content heading */
.heading > h3 {
	font-size: 2.5em;
	font-weight: 600;
	text-align: center;
	text-transform: capitalize;
	margin-bottom: 1.5em;
	color: #000000;
}
/* End of content heading */

/* Features CSS */
#features {
	background: #F6EEE9;
	text-align: center;
	padding-left: 4em 0;
	min-height: 500px;
}

.feature-grid {
	margin-bottom: 100px;
}

.feature-grid > h4 {
  font-size: 1.5em;
  text-transform: capitalize;
  padding: 0.8em 0;
  font-weight: 500;
  color:#48474D;
}

.feature-grid > p {
  font-size: 1.1em;
  color: #666666;
  line-height: 1.6em;
  margin-bottom: 2em;
}

.feature-grid > img {
  background: #0E83CD;
  padding: 1em 1em;
}

.feature-grid > img:hover {
  background: rgb(255, 0, 39);
  border-radius: 10px;
}

.feature-grid > a {
	background: rgb(255, 0, 39);
  padding: 0.5em 1em;
  font-size: 1.15em;
  color: #FFFFFF;
  text-decoration: none;
  text-transform: capitalize;
}

.feature-grid > a:hover {
	background: #0E83CD;
}
/* End of Features CSS */

/* About CSS */
#about {
	padding: 3em 0;
}

.about-bottom {
	margin-top: 4%;
}

.about-left > h4 {
	color: #03CF74;
	font-size: 18px;
	line-height: 1.5em;
	margin: 0;
}

.about-left > p {
	font-size: 15px;
    color: #959798;
    margin-top: 10px;
    line-height: 1.8em;
}

.abt-left > span {
	font-size: 2em;
	padding: 20px 20px;
	background: #1F272A;
	color: #03CF74;
}

.abt-right > p {
	font-size: 15px;
    color: #959798;
    line-height: 1.8em;
}

.abt-left {
	width: 20%;
	float: left;
}

.abt-right {
	width: 80%;
	float: right;
}

.abt-one:nth-child(2) {
	margin-top: 5%;
}
/* End of About CSS */

/* contact CSS */
#contact {
  padding: 6em 0px;
  background: #1F272A;
	height: 200px;
	text-align: center;
	margin: 0 auto 0 auto;
}

.contact-info {
	list-style: none;
	display: table;
	margin-top: 2.5%;
	margin-left: auto;
	margin-right: auto;
}

.contact-info:nth-child(1) {
	margin-top: 0;
}

.contact-info > li {
	text-align: left;
}

.contact-info > li > p > span {
	font-size: 1.5em;
	color: #03CF74;
	display: inline-block;
	padding-right: 10px;
}

.contact-info > li > p {
	color: #FFFFFF;
	font-size: 16px;
	display: inline-block;
}

.contact-info > p > a {
	color: #FFFFFF;
}

.contact-info > p > a:hover {
	text-decoration: none;
	color: #03CF74;
}
/* End of Contact CSS */

/*  Footer CSS*/
footer {
	padding: 3.5em 0px;
	background: #1F272A;
	text-align: center;
}

.footer-top > p {
	font-size: 15px;
	color: #FFFFFF;
	margin-top: 3%;
}

.footer-top > p > a {
	color: #FFFFFF;
}

.footer-top > p > a:hover {
	color: #03CF74;
}

.footer-top > ul {
    margin-top: 3%;
}

.footer-top > ul > li {
	list-style: none;
	display: inline-block;
	margin: 0 6px;
}

.footer-top > ul > li > a > span {
	background: url(../images/social-icons.png) no-repeat;
	width: 48px;
	height: 48px;
	display: block;
}

.footer-top > ul > li > a > span.fb {
	background-position: 0px 0px;
}

.footer-top > ul > li > a > span.twit {
	background-position: -48px 0px;
}

.footer-top > ul > li > a > span.google {
	background-position: -96px 0px;
}

.footer-top > ul > li > a > span.fb:hover {
	background-position: 0px -48px;
}

.footer-top > ul > li > a > span.twit:hover {
	background-position: -48px -48px;
}

.footer-top > ul > li > a > span.google:hover {
	background-position: -96px -48px;
}
/* End of Footer CSS */

@media (max-width: 480px) {
	.abt-left > span {
		font-size: 1.5em;
		padding: 14px 14px;
	}
}

@media (max-width: 320px) {
	header {
		padding: 0em 0em 0.5em 0em;
	}

	.logo {
		width: 42%;
	}

	nav {
		width: 55%;
		padding: 0.8em 0em 0em 0em;
	}

	.abt-left > span {
		font-size: 1.2em;
		padding: 10px 10px;
	}
}

